# Debugger

./: CMakeLists.txt  README.md
Debugger/: CMakeLists.txt  MainLayer.cpp  MainLayer.h  Worker.cpp  Worker.h  main.cpp
Debugger/Network/: PracticalSocket.cpp
Debugger/assets/shaders/: basic.glsl  lighting.glsl  texture.glsl
Debugger/proto/: debug.proto
phoenix/include/Phoenix/core/: base.h
